--- a/assets/styles/_cards.scss
+++ b/assets/styles/_cards.scss
@@ -9,8 +9,8 @@
 
 .p-card .p-card-title {
     margin-bottom: 0;
-    line-height: var(--line-height-6);
-    font-size: var(--font-size-6);
+    line-height: var(--line-height-8);
+    font-size: var(--font-size-8);
     font-weight: 300;
     letter-spacing: 0.5px;
     color: var(--black);
@@ -21,7 +21,8 @@
     }
 }
 
-.p-card .p-card-body {
+.p-card .p-card-body,
+.p-card .p-card-content {
     padding-bottom: 0;
 }
 
