content from Jeremiah

--- a/assets/styles/_cards.scss
+++ b/assets/styles/_cards.scss
@@ -4,7 +4,7 @@
     border-radius: 8px;
     box-shadow: none;
     color: var(--black);
-    height: 100%;
+    height: auto;
 }
 
 .p-card .p-card-title {
